# test-pypi-packages

./: setup.cfg
src/example_package_adarshSrivastava01.egg-info/: PKG-INFO  SOURCES.txt
