[metadata]
name = example-package-adarshSrivastava01
version = 0.0.1
author = Adarsh Srivastava
author_email = adarshsrivastava.tech@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adarshSrivastava01/test-pypi-packages
project_urls =
    Bug Tracker = https://github.com/adarshSrivastava01/test-pypi-packages/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src